# advent-of-code-2025-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  download_inputs.sh  main.cpp
common/: common.h  day.h
day/day_1/: day_1.h  dial.h
day/day_2/: day_2.h
day/day_3/: day_3.h
test/: day_1_test.cpp  day_2_test.cpp  day_3_test.cpp
